src/objects/AB2__AdBookPackageDrop__c.object
<CustomObject>
    <description>AdBook Package Drop</description>
    <fields>
        <fullName>AB2__AB3rdPartyAdServer__c</fullName>
        <label>AB 3rd Party Ad Server</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABBillingModel__c</fullName>
        <description>The AdBook Drop Billing Model</description>
        <inlineHelpText>The AdBook Drop Billing Model</inlineHelpText>
        <label>AB Billing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AB2__ABBillingModel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABDropCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the Package Drop been cancelled?</description>
        <inlineHelpText>Has the Package Drop been cancelled?</inlineHelpText>
        <label>AB Drop Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropGoals__c</fullName>
        <description>The Goal count for a Package Drop.</description>
        <inlineHelpText>The Goal count for a Package Drop.</inlineHelpText>
        <label>AB Drop Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropID__c</fullName>
        <description>AdBook Package Drop ID</description>
        <externalId>true</externalId>
        <inlineHelpText>AdBook Package Drop ID</inlineHelpText>
        <label>AB DropID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__ABDropNotes__c</fullName>
        <description>AdBook Drop Notes</description>
        <inlineHelpText>AdBook Drop Notes</inlineHelpText>
        <label>AB Drop Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__ABEndDate__c</fullName>
        <label>AB End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABGrossCost__c</fullName>
        <description>The AdBook Net Price adjusted to include the Agency Commission.</description>
        <inlineHelpText>The AdBook Net Price adjusted to include the Agency Commission.</inlineHelpText>
        <label>AB Gross Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementId__c</fullName>
        <description>The AdBook Package Media Element Id (Long)</description>
        <inlineHelpText>The AdBook Package Media Element Id (Long)</inlineHelpText>
        <label>ABMediaElementId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementPath__c</fullName>
        <formula>AB2__ABMediaElement__r.AB2__CalculatedPath__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Media Element Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The AdBook Media Element for the drop.</description>
        <inlineHelpText>Link to the Salesforce record for AdBook Media Element</inlineHelpText>
        <label>AB MediaElement</label>
        <referenceTo>AB2__MediaElement__c</referenceTo>
        <relationshipLabel>AdBook Package Drops</relationshipLabel>
        <relationshipName>AdBook_Package_Drops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABPackagePrice__c</fullName>
        <description>The AdBook Working User Price to override the standard pricing for Package Drops</description>
        <inlineHelpText>The AdBook Price to override the standard pricing for Package Drops</inlineHelpText>
        <label>AB Package Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__ABPayType__c</fullName>
        <description>Billing Category - Paid For / Value Add / Make Good / Remnant</description>
        <inlineHelpText>AdBook Billing Category</inlineHelpText>
        <label>AB Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AB2__AB_Billing_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABPriceTypeRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The AdBook Price Type. Determines the AB Price Calculation Type.</description>
        <inlineHelpText>The AdBook Price Type. Determines the AB Price Calculation Type.</inlineHelpText>
        <label>AB Price Type</label>
        <referenceTo>AB2__AdBookPriceType__c</referenceTo>
        <relationshipLabel>AdBook Package Drops</relationshipLabel>
        <relationshipName>AdBook_Package_Drops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABPriceType__c</fullName>
        <description>The AdBook PriceType that is used for pricing calculations</description>
        <inlineHelpText>The AdBook PriceType that is used for pricing calculations</inlineHelpText>
        <label>AB Price Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPZ</fullName>
                </value>
                <value>
                    <fullName>CPV</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABQuantityZero__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the AdBook drop quantity zero? 
Allows for zero quantity drops. The Salesforce Quantity field will be set to 1 in these cases.</description>
        <inlineHelpText>Is the AdBook drop quantity zero?</inlineHelpText>
        <label>AB Quantity Zero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABStartDate__c</fullName>
        <label>AB Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABUpdateFromCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true(checked) indicates that the operation being performed on the OpportunityLineItem is triggered from code and should not result in an automated Sync/Rollup action. 
This field should only be set from code and will be cleared by a trigger when used.</description>
        <label>AB UpdateFromCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABWorkingPrice__c</fullName>
        <description>The AdBook Working Unit/Net Price. Maps to the AdBook Drop.Price field. 
For orders with PriceType of CPM this will be the price per 1000 impressions. 
For Flat Rate, CPA/CPC and CPL orders this is the price as entered.</description>
        <inlineHelpText>The AdBook Working Unit/Net Price. Maps to the AdBook Drop.Price field. 
For orders with PriceType of CPM this will be the price per 1000 impressions. 
For Flat Rate, CPA/CPC and CPL orders this is the price as entered.</inlineHelpText>
        <label>AB Working Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__AB_Synchronization_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the event of a synchronization issue creating this drop in AdBook this record will be prevented from further sync operations until linked to the correct record.</description>
        <inlineHelpText>In the event of a synchronization issue creating this drop in AdBook this record will be prevented from further sync operations until linked to the correct record.</inlineHelpText>
        <label>AB Synchronization Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityId__c</fullName>
        <description>Parent Opportuntiy</description>
        <inlineHelpText>Parent Opportuntiy</inlineHelpText>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AdBook Package Drops</relationshipLabel>
        <relationshipName>AdBookPackageDrops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__PricebookEntryId__c</fullName>
        <description>Manual reference to PricebookEntry</description>
        <label>PricebookEntryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__TotalPrice__c</fullName>
        <description>Calculated Total Price for the Package Drop</description>
        <inlineHelpText>Calculated Total Price for the Package Drop</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AdBook Package Drop</label>
    <nameField>
        <label>AdBook Package Drop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook Package Drops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>